# kolokwium_sinwo_pm

kolo/zad1/: makefile  test_build.sh
kolo/zad2/: CMakeLists.txt
kolo/zad3/: CMakeLists.txt
